--- a/templates/partial/header.html
+++ b/templates/partial/header.html
@@ -1,7 +1,11 @@
-<a href="#">당근마켓</a>
+<a href="{% url 'base:home' %}">당근마켓</a>
 <ul>
   <li>
+    {% if user.is_authenticated %}
+    <a href="{% url 'users:logout' %}">로그아웃</a>
+    {% else %}
     <a href="{% url 'users:login' %}">로그인</a>
     <a href="#">회원가입</a>
+    {% endif %}
   </li>
 </ul>
