--- a/templates/partial/header.html
+++ b/templates/partial/header.html
@@ -5,7 +5,7 @@
     <a href="{% url 'users:logout' %}">로그아웃</a>
     {% else %}
     <a href="{% url 'users:login' %}">로그인</a>
-    <a href="#">회원가입</a>
+    <a href="{% url 'users:signup' %}">회원가입</a>
     {% endif %}
   </li>
 </ul>
