제공된 html 적용
1. 기존의 header.html을 nav.html 로 이름 변경
2 임시로 제작한 html을 제공된 html로 대체
3. settings.py 에 static url 적용

--- a/templates/partial/footer.html
+++ b/templates/partial/footer.html
@@ -1,3 +1,6 @@
 <footer>
-  &copy; 당근마켓
+  <div class="container">
+    <a href="{% url 'base:home' %}">2019 당근 마켓</a>
+    <h6>Copyright © Danggeun Market Inc. All rights reserved.</h6>
+  </div>
 </footer>
