로그인/회원가입 페이지 CSS 수정
html 스켈레톤 코드의  'form-group' 클래스가 누락되어 적용함

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -7,8 +7,11 @@
   <form class="form-sign" method='post' action='{% url 'users:login' %}'>
     {% csrf_token %}
     <h5 class="form-headline">🥕 로그인 🐰</h5>
-    {{ form.email }}
-    {{ form.password }}
+    {% for field in form %}
+    <div class="form-group">
+      {{ field }}
+    </div>
+    {% endfor %}
     <button class="btn btn-block btn-primary">로그인 하기</button>
     <a href="{% url 'users:signup' %}" class="btn btn-block btn-light">계정 만들기</a>
 
