--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -11,6 +11,7 @@
     <div class="form-group">
       {{ field }}
     </div>
+    {% endfor %}
     <button class="btn btn-block btn-primary">동의하고 시작하기</button>
     <a href="{% url 'users:login' %}" class="btn btn-block btn-light">로그인</a>
 
