--- a/templates/partial/footer.html
+++ b/templates/partial/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="container">
-    <a href="{% url 'base:home' %}">2019 당근 마켓</a>
+    <a href="{% url 'products:home' %}">2019 당근 마켓</a>
     <h6>Copyright © Danggeun Market Inc. All rights reserved.</h6>
   </div>
 </footer>
