--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -10,7 +10,7 @@
   <ul class="list-products row">
     {% for product in products %}
     <li class="list-products-item col-12 col-md-4 col-lg-3">
-      <a href="detail.html">
+      <a href="{% url 'products:product_detail' product.id %}">
         <div class="card">
           <div class="card-img-top"
             style="background: url('{{ product.images.first.image.url }}') no-repeat center; background-size: cover; height: 240px">
