--- a/templates/partial/nav.html
+++ b/templates/partial/nav.html
@@ -14,7 +14,7 @@
       </li>
       {% endif %}
       <li class="nav-item">
-        <a href="#"><i class="material-icons ic-create">create</i></a>
+        <a href="{% url 'products:register' %}"><i class="material-icons ic-create">create</i></a>
       </li>
       <li class="nav-item">
         {% if user.is_authenticated %}
