--- a/templates/products/product_create.html
+++ b/templates/products/product_create.html
@@ -51,35 +51,37 @@
 		<div class="form-group form-description">
 			{{ form.describe }}
 		</div>
-		<div class="form-group form-car-model-year">
-			<select id="carModelYear" class="form-control" name='year'>
-				{% for key, val in form.year.field.widget.choices %}
-				{% if key == 0 %}
-				<option value="{{ key }}" disabled selected>{{ val }}</option>
+		<div id="carField">
+			<div class="form-group form-car-model-year">
+				<select id="carModelYear" class="form-control" name='year'>
+					{% for key, val in form.year.field.widget.choices %}
+					{% if key == 0 %}
+					<option value="{{ key }}" disabled selected>{{ val }}</option>
+					{% else %}
+					<option value="{{ key }}">{{ val }}</option>
+					{% endif %}
+					{% endfor %}
+				</select>
+			</div>
+			<div class="form-group form-car-mileage">
+				{{ form.driven_distance }}
+			</div>
+			<div class="form-group form-car-smoking">
+				<label>차량 판매자 흡연 여부</label>
+				{% for key, val in form.smoking.field.widget.choices %}
+				{% if key %}
+				<div class="form-check form-check-inline form-check-smoking">
+					<input class="form-check-input" type="radio" name="smoking" id="inlineSmoker" value={{ key }}>
+					<label class="form-check-label smoker" for="inlineSmoker">{{ val }}</label>
+				</div>
 				{% else %}
-				<option value="{{ key }}">{{ val }}</option>
+				<div class="form-check form-check-inline form-check-nonsmoking">
+					<input class="form-check-input" type="radio" name="smoking" id="inlineNonSmoker" value={{ key }}>
+					<label class="form-check-label non-smoker" for="inlineNonSmoker">{{ val }}</label>
+				</div>
 				{% endif %}
 				{% endfor %}
-			</select>
-		</div>
-		<div class="form-group form-car-mileage">
-			{{ form.driven_distance }}
-		</div>
-		<div class="form-group form-car-smoking">
-			<label>차량 판매자 흡연 여부</label>
-			{% for key, val in form.smoking.field.widget.choices %}
-			{% if key %}
-			<div class="form-check form-check-inline form-check-smoking">
-				<input class="form-check-input" type="radio" name="smoking" id="inlineSmoker" value={{ key }}>
-				<label class="form-check-label smoker" for="inlineSmoker">{{ val }}</label>
 			</div>
-			{% else %}
-			<div class="form-check form-check-inline form-check-nonsmoking">
-				<input class="form-check-input" type="radio" name="smoking" id="inlineNonSmoker" value={{ key }}>
-				<label class="form-check-label non-smoker" for="inlineNonSmoker">{{ val }}</label>
-			</div>
-			{% endif %}
-			{% endfor %}
 		</div>
 		<button type="submit" class="btn btn-primary btn-submit">상품 등록하기</button>
 	</form>
