--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -29,8 +29,36 @@
     {% endfor %}
   </ul>
 </div>
-{% if category == 'car' %}
-<form action="">
+
+<nav>
+  <ul class="pagination justify-content-center">
+    {% if products.has_previous %}
+    <li class="page-item">
+      <a class="page-link" href="/car/?page={{ products.previous_page_number }}">이전</a>
+    </li>
+    {% else %}
+    <li class="page-item disabled">
+      <a class="page-link" href="#" tabindex="-1" aria-disabled="true">이전</a>
+    </li>
+    {% endif %}
+    <li class="page-item active" aria-current="page">
+      <a class="page-link" href="/car/?page={{ products.number }}">{{ products.number }}
+        <span class="sr-only">(current)</span>
+      </a>
+    </li>
+    {% if products.has_next %}
+    <li class="page-item">
+      <a class="page-link" href="/car/?page={{ products.next_page_number }}">다음</a>
+    </li>
+    {% else %}
+    <li class="page-item disabled">
+      <a class="page-link" href="#" tabindex="-1" aria-disabled="true">다음</a>
+    </li>
+    {% endif %}
+  </ul>
+</nav>
+
+<form action="{% url 'products:car_list' %}" method="get">
   <div class="modal fade" id="section-filter" tabindex="-1" role="dialog" data-controller="design"
     data-action="modal_example" style="display: none;" aria-hidden="true">
     <div class="modal-dialog modal-filter" role="document">
@@ -45,45 +73,56 @@
         <div class="modal-body">
           <div class="form-group filter-car-model-year">
             <label class="" for="sliderCarModelYear">차량 연식 범위</label>
-            <input class="input-slider-item" id="sliderCarModelYear" type="text"
-              aria-describedby="sliderCarModelYearHelp">
-            <small id="sliderCarModelYearHelp" class="text-muted">2010년부터 2020년까지</small>
+            {{ form.year }}
+            <small id="sliderCarModelYearHelp" class="text-muted"></small>
           </div>
 
           <div class="form-group filter-car-mileage">
             <label for="sliderCarMileage">차량 주행 거리</label>
-            <input class="input-slider-item" id="sliderCarMileage" type="text" aria-describedby="sliderCarMileageHelp">
-            <small id="sliderCarMileageHelp" class="text-muted">0km부터 10000km까지</small>
+            {{ form.driven_distance }}
+            <small id="sliderCarMileageHelp" class="text-muted"></small>
           </div>
 
           <div class="form-group filter-car-smoking">
             <label>차량 판매자 흡연 여부</label>
 
+            {% for key, val in form.smoking.field.widget.choices %}
+            {% if key == 'total' %}
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="formRadiosSmoking" id="formRadiosSmoking_1"
-                value="option1">
+              <input class="form-check-input" type="radio" name="smoking" id="formRadiosSmoking" value={{ key }}
+                {% if smoking is None %}checked{% endif %}>
               <label class="form-check-label" for="formRadiosSmoking_1">
-                흡연
+                {{ val }}
               </label>
             </div>
+            {% elif key == 'true' %}
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="formRadiosSmoking" id="formRadiosSmoking_2"
-                value="option2">
-              <label class="form-check-label" for="formRadiosSmoking_2">
-                비흡연
+              <input class="form-check-input" type="radio" name="smoking" id="formRadiosSmoking_1" value={{ key }}
+                {% if smoking == True %}checked{% endif %}>
+              <label class="form-check-label" for="formRadiosSmoking_1">
+                {{ val }}
               </label>
             </div>
+            {% else %}
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="smoking" id="formRadiosSmoking_2" value={{ key }}
+                {% if smoking == False %}checked{% endif %}>
+              <label class="form-check-label" for="formRadiosSmoking_2">
+                {{ val }}
+              </label>
+            </div>
+            {% endif %}
+            {% endfor %}
           </div>
         </div>
 
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary mr-auto">초기화</button>
+          <button type="button" class="btn btn-secondary mr-auto" id="filterInitializer">초기화</button>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
-          <button type="button" class="btn btn-primary">적용</button>
+          <button type="submit" class="btn btn-primary">적용</button>
         </div>
       </div>
     </div>
   </div>
 </form>
-{% endif %}
 {% endblock content %}
