판매글 등록 유효성 검사 및 상세 페이지 데이터 포멧 수정
1. 상품 카테고리별 유효성검사
2. 유효성 검사를 통과 못할 시 html 에서 에러 메세지 표시
3. 상세 페이지 내부 연식, 등록 시간 포멧 스켈레톤 코드에 맞게 변경

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
 
     // 차량 주행 거리 input
     var minCarMileage = 0;
-    var maxCarMileage = 1000000;
+    var maxCarMileage = 100000;
     var currentMinCarMileage = {% if min_driven_distance %}Number('{{ min_driven_distance }}'){% else %} minCarMileage{% endif %}
     var currentMaxCarMileage = {% if max_driven_distance %}Number('{{ max_driven_distance }}'){% else %} maxCarMileage{% endif %}
     $("#sliderCarMileage").slider({ min: minCarMileage, max: maxCarMileage, value: [currentMinCarMileage, currentMaxCarMileage], step: 1000, focus: true });
