--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load humanize %}
+{% load mathfilters %}
 
 {% block title %}당근마켓 - 중고 제품 상세!{% endblock title %}
 
@@ -25,8 +26,9 @@
 	</h4>
 	<ul class="list-product-information">
 		<li class="list-item category">카테고리 <span>{{ product.category.name }}</span></li>
-		<li class="list-item date">상품 등록 시간 <span><time datetime='2019-08-20T08:30:00Z'>2개월 전</time></span></li>
-		<li class="list-item car-model-year">차량 연식 <span>{{ product.year }}년</span></li>
+		<li class="list-item date">상품 등록 시간 <span>{% if month %}}{ months }}개월 전{% else %}{{ days }}일 전{% endif %}</span>
+		</li>
+		<li class="list-item car-model-year">차량 연식 <span>{{ product.year|add:'-2019'|abs }}년</span></li>
 		<li class="list-item car-mileage">주행 거리 <span>{{ product.driven_distance|intcomma }}km</span></li>
 		<li class="list-item car-smoking">판매자 흡연 여부 <span>{% if product.smoking %}흡연자{% else %}비흡연자{% endif %}</span></li>
 	</ul>
