로그인 / 회원가입 유효성 검사 및 버그 수정
1. 로그인과 회원가입 폼 작성시 유효성 검사 및 실패 메세지 html에 표시
2. 비로그인시 판매글 작성 버튼 클릭하면 로그인 페이지로 리다이렉트
3. 회원가입 완료 후 로그인 페이지로 리다이렉트
4. 회원가입시 이름 필드 선택 표시

--- a/templates/products/product_create.html
+++ b/templates/products/product_create.html
@@ -44,7 +44,7 @@
 		<div class="form-group form-title">
 			{{ form.title }}
 			{% if form.title.errors %}
-			<p class="text-danger">{{ form.title.errors }}</p>
+			<span class="text-danger">{{ form.title.errors }}</span>
 			{% endif %}
 		</div>
 
