--- a/templates/partial/nav.html
+++ b/templates/partial/nav.html
@@ -14,7 +14,11 @@
       </li>
       {% endif %}
       <li class="nav-item">
+        {% if user.is_anonymous %}
+        <a href="{% url 'users:login' %}"><i class="material-icons ic-create">create</i></a>
+        {% else %}
         <a href="{% url 'products:register' %}"><i class="material-icons ic-create">create</i></a>
+        {% endif %}
       </li>
       <li class="nav-item">
         {% if user.is_authenticated %}
