판매글 작성시 이슈 해결
1. 흡연 유무 유효성검사 실행
2. 유효성 실패시 값 초기화 에러 수정
3. 차량 카테고리 선택시 차량 필드 디스플레이 옵션 추가
4. 상세페이지에서 뒤로가기 버튼 url 수정

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,14 +79,19 @@
     // 판매글 작성시 차량 카테고리 선택
     $(function () {
       $('#carField').hide();
-      $('#productsCategory').change(function () {
+      $('#productsCategory').on("propertychange change keyup paste input", function () {
         if ($('#productsCategory').val() == 1) {
           $('#carField').show();
         } else {
           $('#carField').hide();
-        }
+        };
       });
     });
+    if ($('#productsCategory').val() == 1) {
+      $('#carField').show();
+    } else {
+      $('#carField').hide();
+    };
   </script>
 </body>
 
