--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="container container-categorized-index">
-  <h5 class="container-headline">중고 챠량 목록</h5>
+  <h5 class="container-headline">중고 차량 목록</h5>
 
   <ul class="list-products row">
     {% for product in products %}
