Products 앱 유닛테스트 진행
상품 판매글 작성시 실제 기능은 정상적으로 동작하지만 테스트시 실패함.
해당 이슈는 깃헙 이슈(https://github.com/DylanMsK/daangn/issues/12)에 작성함

--- a/templates/products/product_create.html
+++ b/templates/products/product_create.html
@@ -51,8 +51,8 @@
 		<div class="form-group form-category">
 			<select id="productsCategory" class="form-control" name='category'>
 				{% for key, val in form.category.field.widget.choices %}
-				{% if not key %}
-				<option value="{{ key }}" disabled selected>{{key}} {{ val }}</option>
+				{% if key == 0 %}
+				<option value="{{ key }}">{{ val }}</option>
 				{% else %}
 				<option value="{{ key }}">{{ val }}</option>
 				{% endif %}
