카테고리별 링크 연결 및 오타 수정
1. 차량을 제외한 다른 카테고리로 이동하는 url 연결
2. 에러 페이지 추가

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,10 +9,10 @@
 
   <div class="categories-group">
     <a href="{% url 'products:car_list' %}" class="btn btn-category">차량</a>
-    <a href="#" class="btn btn-category">인기매물</a>
-    <a href="#" class="btn btn-category">가구/인테리어</a>
-    <a href="#" class="btn btn-category">유아동/유아도서</a>
-    <a href="#" class="btn btn-category">생활/가공식품</a>
+    <a href="{% url 'products:hot_list' %}" class="btn btn-category">인기매물</a>
+    <a href="{% url 'products:furniture_list' %}" class="btn btn-category">가구/인테리어</a>
+    <a href="{% url 'products:children_list' %}" class="btn btn-category">유아동/유아도서</a>
+    <a href="{% url 'products:life_list' %}" class="btn btn-category">생활/가공식품</a>
   </div>
 
   <ul class="list-products row">
