--- a/templates/home.html
+++ b/templates/home.html
@@ -37,15 +37,23 @@
     {% endfor %}
   </ul>
 
-  <h5>
+  <h5 align="center">
     {% if page_obj.has_previous %}
-    <a href="/?page={{ page_obj.previous_page_number }}">Previous</a>
+    <a class="btn btn-primary" role="button" href="/?page={{ page_obj.previous_page_number }}">이전</a>
+    {% else %}
+    <button class="btn" disabled>다음</button>
     {% endif %}
 
+    {% if page_obj %}
     Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+    {% else %}
+    Page 1 of 1
+    {% endif %}
 
     {% if page_obj.has_next %}
-    <a href="/?page={{ page_obj.next_page_number }}">Next</a>
+    <a class="btn btn-primary" role="button" href="/?page={{ page_obj.next_page_number }}">다음</a>
+    {% else %}
+    <button class="btn" disabled>다음</button>
     {% endif %}
   </h5>
 </div>
