--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -30,33 +30,25 @@
   </ul>
 </div>
 
-<nav>
-  <ul class="pagination justify-content-center">
-    {% if products.has_previous %}
-    <li class="page-item">
-      <a class="page-link" href="/car/?page={{ products.previous_page_number }}">이전</a>
-    </li>
-    {% else %}
-    <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1" aria-disabled="true">이전</a>
-    </li>
-    {% endif %}
-    <li class="page-item active" aria-current="page">
-      <a class="page-link" href="/car/?page={{ products.number }}">{{ products.number }}
-        <span class="sr-only">(current)</span>
-      </a>
-    </li>
-    {% if products.has_next %}
-    <li class="page-item">
-      <a class="page-link" href="/car/?page={{ products.next_page_number }}">다음</a>
-    </li>
-    {% else %}
-    <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1" aria-disabled="true">다음</a>
-    </li>
-    {% endif %}
-  </ul>
-</nav>
+<h5 align="center">
+  {% if products.has_previous %}
+  <a class="btn btn-primary" role="button" href="/cars/?page={{ products.previous_page_number }}">이전</a>
+  {% else %}
+  <button class="btn" disabled>이전</button>
+  {% endif %}
+
+  {% if products %}
+  Page {{ products.number }} of {{ products.paginator.num_pages }}
+  {% else %}
+  Page 1 of 1
+  {% endif %}
+
+  {% if products.has_next %}
+  <a class="btn btn-primary" role='button' href="/cars/?page={{ products.next_page_number }}">다음</a>
+  {% else %}
+  <button class="btn" disabled>다음</button>
+  {% endif %}
+</h5>
 
 <form action="{% url 'products:car_list' %}" method="get">
   <div class="modal fade" id="section-filter" tabindex="-1" role="dialog" data-controller="design"
