차량 필터링 초기화버튼 에러 수정
초기화 버튼 클릭시 흡연 유무 버튼만 초기화되지 않는 오류 수정

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
       $("#sliderCarMileage").slider({ min: minCarMileage, max: maxCarMileage, value: [minCarMileage, maxCarMileage], step: 1000, focus: true });
       $("#sliderCarMileage").slider('refresh');
       $('#sliderCarMileageHelp').text(minCarMileage + 'km부터 ' + maxCarMileage + 'km까지');
-      $('#formRadiosSmoking').attr('checked', 'checked');
+      $('#formRadiosSmoking').prop('checked', 'checked');
     });
 
     // 판매글 작성시 차량 카테고리 선택
