Feedback 반영 3 - 데이터를 가져올 때 성능(예: N+1 쿼리 처리)을 고려했는가? - 성능을 고려하여 인덱스를 추가했는가?
상품 조회와 필터링시 중복되는 쿼리를 제거하고 유사한 쿼리들을 통합함.
차량 카테고리를 조회할 경우 26개 쿼리가 발생하는데 수정 후 3개의 쿼리로 줄어듬.

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
       <a href="{% url 'products:product_detail' product.id %}">
         <div class="card">
           <div class="card-img-top"
-            style="background: url('{{ product.images.first.image.url }}') no-repeat center; background-size: cover; height: 240px">
+            style="background: url('{{ product.image.0.image.url }}') no-repeat center; background-size: cover; height: 240px">
           </div>
           <div class="card-body">
             <h5 class="title">{{ product.title|truncatewords:2 }}</h5>
