--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -6,14 +6,14 @@
 
 {% block content %}
 <div class="container container-categorized-index">
-  <h5 class="container-headline">중고 {{ page_name }} 목록</h5>
+  <h5 class="container-headline">중고 {{ category.kor_name }} 목록</h5>
   <ul class="list-products row">
     {% for product in products %}
     <li class="list-products-item col-12 col-md-4 col-lg-3">
       <a href="{% url 'products:product_detail' product.id %}">
         <div class="card">
           <div class="card-img-top"
-            style="background: url('{{ product.images.first.image.url }}') no-repeat center; background-size: cover; height: 240px">
+            style="background: url('{{ product.image.0.image.url }}') no-repeat center; background-size: cover; height: 240px">
           </div>
           <div class="card-body">
             <h5 class="title">{{ product.title|truncatewords:2 }}</h5>
