--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -29,9 +29,11 @@
 		<li class="list-item date">상품 등록 시간 <span>{% if months >= 1 %}{{ months }}개월 전{% else %}{{ days }}일
 				전{% endif %}</span>
 		</li>
+		{% if product.category.name == '차량' %}
 		<li class="list-item car-model-year">차량 연식 <span>{{ product.year }}년</span></li>
 		<li class="list-item car-mileage">주행 거리 <span>{{ product.driven_distance|intcomma }}km</span></li>
 		<li class="list-item car-smoking">판매자 흡연 여부 <span>{% if product.smoking %}흡연자{% else %}비흡연자{% endif %}</span></li>
+		{% endif %}
 	</ul>
 	<div class="description">
 		{{ product.describe }}
